# cell_automaton

./: .gitignore  Cargo.toml  README.md  test.txt
java_one/machine/: Main.java
java_one/machine/lib/: Config.java  Rule.java
java_one/machine/lib/cell/: Cell.java  Off.java  On.java
java_one/machine/lib/screen/: ScreenModule.java
java_one/machine/lib/tools/: Canvas.java  hex_pattern.txt
java_one/machine/test/: Bipath.java  C_to_P_24.java  Corner.java  Cross.java  Def.java  Diode.java  Not.java  Or.java  Strobe.java  Wire.java
rust_one/: .gitignore  Cargo.toml
rust_one/src/: lib.rs  lib.rs.bak  main.rs  test.rs
rust_one/src/_fails/1/: lib.rs.bak  lib.rs.bak2
rust_one/src/_history/_fails/1/: lib.rs
rust_one/src/_history/_fails/2/: lib.rs.bak  lib.rs.bak2
rust_one/src/_history/version1-vec adjecents/: main.rs
rust_one/src/canvas/: mod.rs
rust_one/src/cell/: mod.rs
rust_one/src/cells/: mod.rs  mod.rs.bak
rust_one/src/rules/: mod.rs.bak2
rust_one/src/states/: mod.rs
rust_one/src/tools/: mod.rs
rust_one/src/tools/screen/: mod.rs
src/: lib.rs  main.rs
src/_history/_fails/version2 bak files/canvas/: mod.rs.bak
src/_history/_fails/version2 bak files/cells/: mod.rs.bak
src/_history/version1-vec adjecents/canvas/: mod.rs
src/_history/version1-vec adjecents/states/: mod.rs  mod.rs.bak
src/_history/version2-channel/: lib.rs
src/_history/version2-channel/canvas/: mod.rs  mod.rs.bak
src/_history/version2-channel/screen/: mod.rs
src/canvas/: mod.rs  mod.rs.bak
src/canvas/cell/: mod.rs
src/states/: mod.rs
(+6 files in other folders)
