[package]
name = "cell_automation"
version = "0.1.0"
authors = ["GiacomoZheng <giacomo821@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# orbtk = "0.3.1-alpha1"
# glutin = "0.21.1"
# azul = { git = "https://github.com/maps4print/azul" }
# conrod = "0.61.1"